{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 153,
  "lineage": "a5b90a14-5c0a-ef7f-41e9-d0ba37810ceb",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/zones/us-west1-b/instanceGroups/agautam-igm",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-09-18T11:06:51.587-07:00",
            "custom_request_headers": [
              "X-Client-Geo-Location: {client_region_subdivision}, {client_city}"
            ],
            "custom_response_headers": [
              "X-Cache-Hit: {cdn_cache_status}"
            ],
            "enable_cdn": true,
            "fingerprint": "lyC48PxCPJg=",
            "health_checks": [
              "projects/internal-interview-candidates/global/healthChecks/agautam-hc"
            ],
            "id": "projects/internal-interview-candidates/global/backendServices/agautam-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "agautam-backend-service",
            "port_name": "http",
            "project": "internal-interview-candidates",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/backendServices/agautam-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.vpc",
            "google_compute_subnetwork.app",
            "google_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-18T11:06:04.546-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/internal-interview-candidates/global/firewalls/agautam-loadbalancer-hc",
            "log_config": [],
            "name": "agautam-loadbalancer-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/networks/agautam-vpc",
            "priority": 1000,
            "project": "internal-interview-candidates",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/firewalls/agautam-loadbalancer-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80",
                  "8080",
                  "1000-9000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-09-18T11:06:04.623-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/internal-interview-candidates/global/firewalls/agautam-firewall",
            "log_config": [],
            "name": "agautam-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/networks/agautam-vpc",
            "priority": 1000,
            "project": "internal-interview-candidates",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/firewalls/agautam-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "web"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.149.166.141",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-09-18T11:05:41.518-07:00",
            "id": "projects/internal-interview-candidates/global/addresses/agauatm-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "agauatm-static-ip",
            "prefix_length": 0,
            "project": "internal-interview-candidates",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/addresses/agauatm-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/internal-interview-candidates/global/forwardingRules/agautam-forwarding-rule",
            "ip_address": "projects/internal-interview-candidates/global/addresses/agauatm-static-ip",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "agautam-forwarding-rule",
            "port_range": "80",
            "project": "internal-interview-candidates",
            "self_link": "https://www.googleapis.com/compute/beta/projects/internal-interview-candidates/global/forwardingRules/agautam-forwarding-rule",
            "target": "projects/internal-interview-candidates/global/targetHttpProxies/agauatm-target-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_global_address.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.vpc",
            "google_compute_subnetwork.app",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default",
            "google_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/internal-interview-candidates/global/networks/agautam-vpc",
            "mtu": 0,
            "name": "agautam-vpc",
            "project": "internal-interview-candidates",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/networks/agautam-vpc"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-18T11:06:06.593-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/internal-interview-candidates/regions/us-west1/subnetworks/agautam-app-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "agautam-app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/networks/agautam-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "internal-interview-candidates",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/regions/us-west1/subnetworks/agautam-app-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-18T11:07:27.515-07:00",
            "id": "projects/internal-interview-candidates/global/targetHttpProxies/agauatm-target-http-proxy",
            "name": "agauatm-target-http-proxy",
            "project": "internal-interview-candidates",
            "proxy_bind": false,
            "proxy_id": 481790562358976688,
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/targetHttpProxies/agauatm-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/urlMaps/agautam-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.vpc",
            "google_compute_subnetwork.app",
            "google_compute_url_map.default",
            "google_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-18T11:07:14.817-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/backendServices/agautam-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "6gt9-iEnaS4=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/internal-interview-candidates/global/urlMaps/agautam-url-map",
            "map_id": 5715495867969626301,
            "name": "agautam-url-map",
            "path_matcher": [],
            "project": "internal-interview-candidates",
            "self_link": "https://www.googleapis.com/compute/v1/projects/internal-interview-candidates/global/urlMaps/agautam-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.vpc",
            "google_compute_subnetwork.app",
            "google_service_account.default"
          ]
        }
      ]
    }
  ]
}